# Towel

./: .gitignore  .test_harness_results.jsonl  .towel.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  launch.command  launch.sh  main.py  pyproject.toml  test_harness.py
.github/workflows/: ci.yml  publish.yml
contrib/systemd/: towel-worker.service
contrib/turboquant-cuda/: CMakeLists.txt  README.md  ggml-turboquant.h  llama-kv-cache-tq.cpp  llama-kv-cache-tq.h  tq-bench.cpp  turboquant.cu  turboquant.cuh
contrib/turboquant-neon/: CMakeLists.txt  README.md  tq_bench_neon.c  turboquant_neon.c  turboquant_neon.h
scripts/: abliterate.py  benchmark.py  grind-badges.sh
src/towel/: __init__.py  audit.py  config.py  launcher.py  logging_setup.py  netguard.py  policy.py  setup_server.py
src/towel/agent/: __init__.py  ab_test.py  agents.py  capture.py  claude_runtime.py  context.py  conversation.py  discovery.py  eval.py  events.py  guardrails.py  heartbeat.py  hooks.py  instance_lock.py  llama_runtime.py  middleware.py  ollama_runtime.py  orchestrator.py  pipelines.py  project.py  rag.py  refs.py  runtime.py  scheduling.py  streaming_protocol.py  titler.py  tool_parser.py  tools_payload.py  turboquant.py
src/towel/canvas/: __init__.py
src/towel/channels/: __init__.py  base.py  discord.py  matrix.py  slack.py  telegram.py  webhook.py
src/towel/cli/: __init__.py  agent_mgr.py  aliases.py  deploy.py  doctor.py  main.py  models.py  repl.py  slash.py  snippets.py  status.py  tui.py  voice.py
src/towel/gateway/: __init__.py  context_sync.py  dispatcher.py  handoff.py  idle_tasks.py  mdns.py  openai_compat.py  server.py  sessions.py  worker_client.py  workers.py
src/towel/mcp/: __init__.py  server.py
src/towel/memory/: __init__.py  auto_capture.py  cluster.py  embeddings.py  guard.py  llm_extract.py  scope.py  store.py
src/towel/nodes/: __init__.py  capability.py  roles.py  tracker.py
src/towel/persistence/: __init__.py  export.py  session_pins.py  store.py  worker_state.py
src/towel/skills/: __init__.py  base.py  loader.py  marketplace.py  plugin.py  registry.py
src/towel/templates/: __init__.py  engine.py
tests/: conftest.py  test_ab_test.py  test_agent_mgr.py  test_agent_profiles.py  test_agents.py  test_ask_command.py  test_auto_capture.py  test_builtin_skills.py  test_cancel.py  test_capture_hooks.py  test_classifier.py  test_cli_orchestrate.py  test_cluster_memory.py  test_config.py  test_context.py  test_context_aware_scheduling.py  test_context_sync.py  test_conversation.py  test_data_skill.py  test_deploy.py  test_discord.py  test_discovery.py  test_dispatch_recent_filters.py  test_dispatcher.py  test_doctor.py  test_doctor_fleet_probes.py  test_embeddings.py  test_eval.py  test_events.py  test_export.py  test_fleet_inventory.py  test_fleet_spawn.py  test_fleet_suggest_targets.py  test_friendly_load_model.py  test_gateway_http.py  test_gateway_workers.py  test_git_skill.py  test_guardrails.py  test_handoff.py  test_idle_tasks_ttl.py  (+54 more)
(+109 files in other folders)
