[project]
name = "towel-ai"
version = "2.3.0"
description = "Don't Panic. Your local AI assistant."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kelsi Davis" },
]
keywords = ["ai", "assistant", "mlx", "local-first", "cluster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "websockets>=14.0",
    "uvicorn>=0.34.0",
    "starlette>=0.45.0",
    "httpx>=0.28.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.22.0",
    "mlx-lm>=0.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "mypy>=1.13",
]
voice = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.5.0",
]
all = ["towel[mlx,dev,voice]"]

[project.scripts]
towel = "towel.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/towel"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true


[project.urls]
Homepage = "https://github.com/Kelsidavis/Towl"
Repository = "https://github.com/Kelsidavis/Towl"
Issues = "https://github.com/Kelsidavis/Towl/issues"
